<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stRejectData" Id="{a5f51463-6548-4143-b0f7-12b7ee1e55c6}">
    <Declaration><![CDATA[TYPE stRejectData :
STRUCT
	Status		: UINT;
	RejectID	: INT;
	RejectType	: STRING;
	Counter		: UINT;
	RejectMsg	: STRING;
	Timestamp	: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>